--- a/_sass/pages/_about.scss
+++ b/_sass/pages/_about.scss
@@ -5,8 +5,8 @@
 }
 
 .about-avatar {
-  width: 150px;
-  height: 150px;
+  width: $avatar-size;
+  height: $avatar-size;
   border-radius: 50%;
   border: 4px solid $color-primary;
   padding: 3px;
@@ -26,8 +26,8 @@
     display: inline-flex;
     align-items: center;
     justify-content: center;
-    width: 40px;
-    height: 40px;
+    width: $social-icon-size;
+    height: $social-icon-size;
     border-radius: 50%;
     background: $subtle-overlay;
     color: $text-secondary;
@@ -73,8 +73,8 @@
   position: absolute;
   left: -2rem;
   top: 0.4rem;
-  width: 12px;
-  height: 12px;
+  width: $timeline-marker-size;
+  height: $timeline-marker-size;
   border-radius: 50%;
   background: $color-primary;
   border: 2px solid #fff;
@@ -83,7 +83,7 @@
 }
 
 .timeline-content {
-  h4 {
+  h3 {
     font-size: 1.05rem;
     font-weight: 700;
     margin-bottom: 0.2rem;
