--- a/_sass/pages/_projects.scss
+++ b/_sass/pages/_projects.scss
@@ -126,8 +126,8 @@
 
 .lang-dot {
   display: inline-block;
-  width: 10px;
-  height: 10px;
+  width: $lang-dot-size;
+  height: $lang-dot-size;
   border-radius: 50%;
 }
 
